This documents significant changes in the 93u+m branch of AT&T ksh93.
For full details, see the git log at: https://github.com/ksh93/ksh

Any uppercase BUG_* names are modernish shell bug IDs.

2022-02-05:

- Fixed: for indexed arrays, given an unset array member a[i] with i > 0,
  ${a[i]=value} failed to assign the value and ${v[i]?error} failed to throw
  an error.

- Fixed: the -a/--allexport shell option incorrectly exported some variables
  with names containing a dot to the environment. Note that the '-x' typeset
  attribute may still be set for them, but this will now not have any
  effect. Variables created in namespaces declared with the 'namespace'
  keyword are only exported while their namespace is active.

2022-02-04:

- Fixed a bug in 'typeset -p': for an indexed array variable that is set
  but empty, it will no longer output a nonexistent '[0]=' element.

2022-02-02:

- Fixed the -a/allexport option to export all variables that are assigned
  values. Previously, arithmetic $((var=1)) or conditional ${var:=value}
  assignments were not exported even with allexport on.

- Fixed a memory leak that could occur when using traps.

- Fixed a use after free issue that could occur when modifying or setting
  a SIGCHLD trap.

2022-02-01:

- Upon invocation, the interactive shell no longer leaves the user without
  a line editor if the VISUAL or EDITOR variable does not indicate emacs,
  gmacs or vi; instead, it now turns on the emacs option by default.

2022-01-31:

- Improved keyboard support for the vi and emacs built-in line editors:
  - Added support for Home key sequences ^[[1~ and ^[[7~ as well as End key
    sequences ^[[4~ and ^[[8~.
  - Added support for arrow key sequences ^[OA, ^[OB, ^[OC and ^[OD.
  - Added support for the following keyboard shortcuts (if the platform
    supports the expected escape sequence):
    - Ctrl-Left Arrow:  Go back one word
    - Alt-Left Arrow:   Go back one word        (Not supported on Haiku)