@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-02-07:
+
+- Compound arrays belonging to a type created with 'typeset -T' now have
+  their -C attribute preserved in the output of 'typeset -p'.
+
 2022-02-05:
 
 - Fixed: for indexed arrays, given an unset array member a[i] with i > 0,
